@startuml lsm_04_iterators
skinparam classAttributeIconSize 0
skinparam classFontSize 12
skinparam roundCorner 8
skinparam shadowing false

interface IIterator {
  + seek(key: string_view) : void
  + next() : void
  + valid() : bool
  + key() : string_view
  + value() : string_view
}

class MergingIterator {
  + seek(key: string_view) : void
  + next() : void
  + valid() : bool
  + key() : string_view
  + value() : string_view
  - heap_ : priority_queue<IIterator*, IteratorComparator>
  - children_ : vector<unique_ptr<IIterator>>
}

class SkipListIterator {
  + seek(key: string_view) : void
  + next() : void
  + valid() : bool
  + key() : string_view
  + value() : string_view
  - list_ : const ConcurrentSkipList&
  - iter_ : ConcurrentSkipList::Iterator
}

class SSTableIterator {
  + seek(key: string_view) : void
  + next() : void
  + valid() : bool
  + key() : string_view
  + value() : string_view
  - sst_ : const SSTable&
  - block_idx_ : size_t
  - current_block_ : optional<Block>
  - block_iter_ : optional<BlockIterator>
}

class BlockIterator {
  + seek(key: string_view) : void
  + next() : void
  + valid() : bool
  + key() : string_view
  + value() : string_view
  - block_ : const Block&
  - offset_ : size_t
  - current_key_ : string
  - current_value_ : string
  - valid_ : bool
}

note right of MergingIterator
  Min-heap cu IteratorComparator:
  a->key() > b->key() (min la top)
  Folosit în scan() și compaction.
end note

SkipListIterator  ..|> IIterator
SSTableIterator   ..|> IIterator
BlockIterator     ..|> IIterator
MergingIterator   ..|> IIterator
MergingIterator   o-- IIterator : aggregates
SSTableIterator   *-- BlockIterator : uses

@enduml